Enable aria-activedescendant work in native textfields

Chrome places restrictions on the use of aria-activedescandant other
browsers do not have and can sometimes lead to issues unique to Chrome.

In this case, ARIA activedescendant required an ARIA role.

Bug: 845651
Change-Id: I3e5743e253db377e00bd4538ec076c1b907bdce6
Reviewed-on: https://chromium-review.googlesource.com/1069608
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560844}
Former-commit-id: d59f76736869128ad687783eec3cebedf2c21b2d